--- a/travis.yml
+++ b/travis.yml
@@ -1,4 +1,10 @@
 language: java
+
+script:
+  - jdk_switcher use oraclejdk8
+
 jdk:
   - oraclejdk8
-script: mvn clean install
+
+script:
+  - mvn clean install
