--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,7 @@ jdk:
   - oraclejdk8
 
 script:
-  - mvn clean install
+  - mvn clean install -DskipTests
+
+after_success:
+  - mvn clean cobertura:cobertura coveralls:report
